rlang/tests/tests_resources/invalid_tests/invalid_markov_feature.rlang
MarkovFeature test := gold - gold' * gold == 1
MarkovFeature test1 := S'[1] - S[0]